Fixed CSS, still needs more work on button panel spacing

--- a/public/main.css
+++ b/public/main.css
@@ -105,7 +105,6 @@
 #centered {
   display: flex;
   justify-content: center;
-  padding-top: 2rem;
 }
 
 #video-player {
